sfdx-source/force-app/main/default/objects/Activity/fields/AC_Contact_Trace_Record__c.field-meta.xml
<CustomField>
    <fullName>AC_Contact_Trace_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-17883 : Lookup field for AWS CTR object. This field will navigate to CTR record from task related record.</description>
    <label>AC Contact Trace Record</label>
    <referenceTo>amazonconnect__AC_ContactTraceRecord__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>