sfdx-source/force-app/main/default/objects/Activity/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>LEM-16014 : Populate the Account name for all store(s) that satisfy the above criteria on the Task as comma-separated text values in a separate field for Related Account(s).</description>
    <label>Account Name</label>
    <type>TextArea</type>
</CustomField>