sfdx-source/force-app/main/default/objects/Activity/fields/Call_Duration_HH_MM__c.field-meta.xml
<CustomField>
    <fullName>Call_Duration_HH_MM__c</fullName>
    <description>Populate via the mappings in LEM-15313</description>
    <label>Call Duration (HH:MM)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>