sfdx-source/force-app/main/default/objects/Activity/fields/Call_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Call_Purpose__c</fullName>
    <description>LEM-16583: Outreach Call Purpose values to the Call Purpose field</description>
    <label>Call Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activations Call</fullName>
            </value>
            <value>
                <fullName>Decision Maker Call</fullName>
            </value>
            <value>
                <fullName>Follow-Up Call</fullName>
            </value>
            <value>
                <fullName>Gate Keeper Call</fullName>
            </value>
            <value>
                <fullName>Influencer Call</fullName>
            </value>
            <value>
                <fullName>Introduction Call</fullName>
            </value>
            <value>
                <fullName>Troubleshooting Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>