sfdx-source/force-app/main/default/objects/Activity/fields/Call_Result__c.field-meta.xml
<CustomField>
    <fullName>Call_Result__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14155: It represents the result of the associated call.</description>
    <inlineHelpText>Represents the result of a call</inlineHelpText>
    <label>Call Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appointment Set</fullName>
            </value>
            <value>
                <fullName>Completed Call</fullName>
            </value>
            <value>
                <fullName>DM Identified</fullName>
            </value>
            <value>
                <fullName>Follow Up</fullName>
            </value>
            <value>
                <fullName>Hung Up</fullName>
            </value>
            <value>
                <fullName>Incorrect Phone Number</fullName>
            </value>
            <value>
                <fullName>Language Blocked</fullName>
            </value>
            <value>
                <fullName>Left Message</fullName>
            </value>
            <value>
                <fullName>Left Voicemail</fullName>
            </value>
            <value>
                <fullName>No Answer</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Onboarding Support</fullName>
            </value>
            <value>
                <fullName>Pitching</fullName>
            </value>
            <value>
                <fullName>Requested Call Back</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>