sfdx-source/force-app/main/default/objects/Activity/fields/Check_In__c.field-meta.xml
<CustomField>
    <fullName>Check_In__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-16864: It is used to store check in date/time.</description>
    <label>Check-In</label>
    <type>DateTime</type>
</CustomField>