sfdx-source/force-app/main/default/objects/Activity/fields/Check_Out__c.field-meta.xml
<CustomField>
    <fullName>Check_Out__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-16864: It is used to store check out date/time.</description>
    <label>Check-Out</label>
    <type>DateTime</type>
</CustomField>