sfdx-source/force-app/main/default/objects/Activity/fields/Chorus_Meeting_Details__c.field-meta.xml
<CustomField>
    <fullName>Chorus_Meeting_Details__c</fullName>
    <description>LEM-16059: It stores chorus meeting details associated with Activity.</description>
    <inlineHelpText>Chorus Meeting Details associated with Activity</inlineHelpText>
    <label>Chorus Meeting Details</label>
    <type>Url</type>
</CustomField>