sfdx-source/force-app/main/default/objects/Activity/fields/Did_you_meet_with_Mx__c.field-meta.xml
<CustomField>
    <fullName>Did_you_meet_with_Mx__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-16864:</description>
    <label>Did you meet with Mx?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>