sfdx-source/force-app/main/default/objects/Activity/fields/Event_Status__c.field-meta.xml
<CustomField>
    <fullName>Event_Status__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14155: It is used to store the status of the related event.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Event Scheduled</fullName>
            </value>
            <value>
                <fullName>Event Held</fullName>
            </value>
            <value>
                <fullName>Event Missed</fullName>
            </value>
            <value>
                <fullName>Event Rescheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>