sfdx-source/force-app/main/default/objects/Activity/fields/Figment_Case_ID__c.field-meta.xml
<CustomField>
    <fullName>Figment_Case_ID__c</fullName>
    <description>LEM-8483: Populate with link to corresponding Figment Case for the call</description>
    <label>Figment Case ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>