sfdx-source/force-app/main/default/objects/Activity/fields/Handoff_Details__c.field-meta.xml
<CustomField>
    <fullName>Handoff_Details__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14155: It indicates the Hand-off rep and the product or topic for the outreach.</description>
    <inlineHelpText>Indicates the Hand-off rep and the product or topic for the outreach</inlineHelpText>
    <label>Handoff Details</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AD - Marketplace</fullName>
            </value>
            <value>
                <fullName>AD - Platform</fullName>
            </value>
            <value>
                <fullName>AM - NSE</fullName>
            </value>
            <value>
                <fullName>AM - QBR/General Consultation</fullName>
            </value>
            <value>
                <fullName>AM - Support Delays</fullName>
            </value>
            <value>
                <fullName>AM - Menu Bug</fullName>
            </value>
            <value>
                <fullName>AM - Inflation</fullName>
            </value>
            <value>
                <fullName>AM - Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>