sfdx-source/force-app/main/default/objects/Activity/fields/Manager_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Manager_Feedback__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14155: It indicates any feedback a user’s manager provided about an activity.</description>
    <inlineHelpText>Indicates any feedback a user’s manager provided about an activity</inlineHelpText>
    <label>Manager Feedback</label>
    <type>TextArea</type>
</CustomField>