sfdx-source/force-app/main/default/objects/Activity/fields/Meeting_Forum__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Forum__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14155: It indicates the type of event.</description>
    <inlineHelpText>Indicates the type of event</inlineHelpText>
    <label>Meeting Forum</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-Person Meeting</fullName>
            </value>
            <value>
                <fullName>Zoom Meeting</fullName>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>