sfdx-source/force-app/main/default/objects/Activity/fields/Meeting_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Outcome__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-16864: It represents the meeting&apos;s outcome.</description>
    <label>Meeting Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Follow-Up Needed</fullName>
            </value>
            <value>
                <fullName>Gatekeeper Reached</fullName>
            </value>
            <value>
                <fullName>Quote Sent</fullName>
            </value>
            <value>
                <fullName>Contract Signed</fullName>
            </value>
            <value>
                <fullName>Mx Not Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>