sfdx-source/force-app/main/default/objects/Activity/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-16864: It is used to store notes.</description>
    <label>Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>