sfdx-source/force-app/main/default/objects/Activity/fields/Outreach_Type_Requested__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Type_Requested__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14155: It stores the type of outreach needed from handoff rep based on expectation set with Mx.</description>
    <inlineHelpText>Type of outreach needed from handoff rep based on expectation set with Mx</inlineHelpText>
    <label>Outreach Type Requested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conference Call Request</fullName>
            </value>
            <value>
                <fullName>Meeting Already Booked on Calendar</fullName>
            </value>
            <value>
                <fullName>Solo Outreach</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>