sfdx-source/force-app/main/default/objects/Activity/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14155: It indicates the resolution of the handoff.</description>
    <inlineHelpText>Indicates the resolution of the handoff</inlineHelpText>
    <length>255</length>
    <label>Resolution</label>
    <type>Text</type>
</CustomField>