sfdx-source/force-app/main/default/objects/Activity/fields/Retain_Recording__c.field-meta.xml
<CustomField>
    <fullName>Retain_Recording__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Populate via the mappings in LEM-15313</description>
    <label>Retain Recording</label>
    <type>Checkbox</type>
</CustomField>