sfdx-source/force-app/main/default/objects/Activity/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14667: It stores sub type values for Task.</description>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Business Considerations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>