sfdx-source/force-app/main/default/objects/Activity/fields/Timeframe_Given_for_Outreach__c.field-meta.xml
<CustomField>
    <fullName>Timeframe_Given_for_Outreach__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14155: It stores the recommended timeframe for handoff rep to complete outreach to merchant.</description>
    <inlineHelpText>Recommended timeframe for handoff rep to complete outreach to merchant</inlineHelpText>
    <label>Timeframe Given for Outreach</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A Completed Call Together Already</fullName>
            </value>
            <value>
                <fullName>This Week</fullName>
            </value>
            <value>
                <fullName>ASAP Urgent</fullName>
            </value>
            <value>
                <fullName>Low Priority - Pursue as Able</fullName>
            </value>
            <value>
                <fullName>Next Week</fullName>
            </value>
            <value>
                <fullName>Next Two Weeks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>