sfdx-source/force-app/main/default/objects/Activity/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14155: It indicates the type of the task.</description>
    <inlineHelpText>Indicates the task type</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>AM &lt;&gt; AD Handoff</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
            <value>
                <fullName>SAD Role Change Request</fullName>
            </value>
            <value>
                <fullName>Text Message</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>